Fix h2 driver typo, update Web Sql driver.